--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@google/generative-ai": "^0.17.1",
     "@mui/material": "^6.0.1",
+    "@next/third-parties": "^14.2.7",
     "@paypal/react-paypal-js": "^8.6.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
